Prevent sidebar buttons being fuly visible when the card isn't fully populated

--- a/static/style.css
+++ b/static/style.css
@@ -130,6 +130,7 @@ p.cover-text {
 #membersListDiv {
   background-color: #FFFFFF;
   z-index: 3;
+  height: 400px;
 }
 
 #sidebar button {
